# module-harness

./: .gitignore  Cargo.toml  Makefile  README.md  SPEC.md
.github/workflows/: ci.yml  release.yml
ontology/: README.md
ontology/src/: audit.md  backtest.md  contract.md  coverage.md  drift.md  eval.md  harness.md  spec.md
runbooks/: ontology-references.md
src/: eval.rs  main.rs  parse.rs
tests/: cli.rs
tests/fixtures/: no_harness.rs  plugin.kt  sample.go  sample.py  sample.rs  sample.ts
