[package]
name = "module-harness"
version = "0.1.0"
edition = "2024"
description = "Parse, validate, and generate module-level harness context (spec, contracts, evals) for any programming language"
license = "MIT OR Apache-2.0"
repository = "https://github.com/btakita/module-harness"
keywords = ["testing", "harness", "spec", "contracts", "evals"]
categories = ["development-tools", "development-tools::testing"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
